infra/gitops/prod/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api
  namespace: group-2-prod
spec:
  selector:
    matchLabels:
      app: api
  replicas: 1
  template:
    metadata:
      labels:
        app: api
    spec:
      containers:
        - name: kbazaar-api
          image: ghcr.io/kbtg-kampus-classnest-se-java/workshopb2-group-2:0cda4294b26e3993fe36626009c2652c9d40d6b3
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          resources:
            limits:
              cpu: "1"
              memory: 512Mi
