infra/gitops/prod/service.yml
apiVersion: v1
kind: Service
metadata:
  name: api
  namespace: workshop
spec:
  ports:
  - port: 80
    targetPort: 9090
    protocol: TCP
  selector:
    app: api
  type: LoadBalancer
